# Correlation_Filtering_Tracking_Lib

./: CMakeLists.txt  README.md
sample/: DSSTcpp_sample_image_sequence_linux.sh
src/cf_libs/common/: cf_tracker.hpp  cv_ext.hpp  feature_channels.hpp  mat_consts.hpp  math_helper.cpp  math_helper.hpp  scale_estimator.hpp  tracker_debug.hpp
src/cf_libs/dsst/: dsst_debug.hpp  dsst_tracker.hpp
src/cf_libs/kcf/: kcf_tracker.hpp
src/cf_libs/staple/: colour_tracker.cpp  colour_tracker.hpp  staple_debug.hpp  staple_tracker.cpp  staple_tracker.hpp
src/main/: evaluate_staple.cpp  main_dsst.cpp  main_kcf.cpp  main_staple.cpp
src/main/tracker_run/: tracker_run.cpp  tracker_run.hpp
